# arctree_tools

./: LICENSE  README.md
passages_tool/: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
passages_tool/assets/: greenscreen_to_alpha.py
passages_tool/assets/sample_textures/: lettuce.passages.json
passages_tool/docs/: passages_minigame_interface_spec.md  passages_rendering_design.md  user_guide.md
passages_tool/json/: test.passages.json  test2.passages.json  verify.passages.json
passages_tool/src/passages_tool/: __init__.py  config.py  main.py
passages_tool/src/passages_tool/converter/: __init__.py  __main__.py  arch_builder.py  egg_writer.py  floor_ceiling_builder.py  lighting_builder.py  scene_builder.py  wall_builder.py
passages_tool/src/passages_tool/editor/: arch_utils.py  history.py  level.py  polyline.py  validator.py
passages_tool/src/passages_tool/io/: level_format.py
passages_tool/src/passages_tool/renderer/: __init__.py  __main__.py  convert_to_jpeg.py  manifest.py  transition_renderer.py  viewpoint_renderer.py
passages_tool/src/passages_tool/textures/: __init__.py  manager.py
passages_tool/src/passages_tool/ui/: palette.py  properties.py  toolbar.py
passages_tool/src/passages_tool/viewport/: __init__.py  camera.py  grid.py
passages_tool/tests/: test_anchor.py  test_arch_builder.py  test_arch_utils.py  test_convert_to_jpeg.py  test_history.py  test_level.py  test_level_format.py  test_level_operations_v2.py  test_level_v2.py  test_manifest.py  test_transition.py  test_validator.py  test_wall_builder.py
